--- a/.eslintignore
+++ b/.eslintignore
@@ -1,9 +1,6 @@
+/src/youbora/youbora.lib.min.js
 /flow-typed/**/*.js
 /coverage
 /dist
 karma.conf.js
 webpack.config.js
-
-
-/src/youbora/youboralib.min.js
-/src/youbora/plugin.js
