--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.23.0",
     "chai": "^3.5.0",
+    "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^3.1.4",
     "eslint": "^3.10.0",
     "eslint-loader": "^1.6.1",
