--- a/package.json
+++ b/package.json
@@ -7,26 +7,29 @@
     "prebuild": "npm run clean",
     "build": "webpack",
     "dev": "webpack --progress --colors --watch",
-    "test": "NODE_ENV=test ./node_modules/.bin/karma start --single-run",
-    "test:watch": "NODE_ENV=test ./node_modules/.bin/karma start --auto-watch",
+    "test": "NODE_ENV=test karma start --color",
+    "test:chrome": "NODE_ENV=test karma start --color --browsers Chrome",
+    "test:chrome:dots": "NODE_ENV=test karma start --color --browsers Chrome --reporters dots",
+    "test:firefox": "NODE_ENV=test karma start --color --browsers Firefox",
+    "test:safari": "NODE_ENV=test karma start --color --browsers Safari",
+    "test:watch": "NODE_ENV=test karma start --color --auto-watch",
     "start": "webpack-dev-server",
-    "release": "npm run build && standard-version",
+    "release": "NODE_ENV=production npm run build -- -p && git add --all dist && git commit -m 'update dist' && standard-version",
     "eslint": "eslint . --color",
     "flow": "flow check",
-    "prepush": "npm run eslint & npm run test & npm run flow"
+    "prepush": "npm run eslint && npm run test && npm run flow"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
-    "babel-core": "^6.24.1",
+    "babel-core": "^6.18.2",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.4.1",
+    "babel-loader": "^6.2.7",
     "babel-plugin-istanbul": "^4.0.0",
     "babel-plugin-transform-class-properties": "^6.22.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.23.0",
     "chai": "^3.5.0",
-    "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^3.1.4",
     "eslint": "^3.10.0",
     "eslint-loader": "^1.6.1",
@@ -40,7 +43,10 @@
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-coverage": "^1.1.1",
+    "karma-firefox-launcher": "^1.0.1",
+    "karma-ie-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
+    "karma-safari-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.2",
     "mocha": "^3.2.0",
@@ -49,6 +55,7 @@
     "sinon": "^2.0.0",
     "sinon-chai": "^2.8.0",
     "standard-version": "^4.0.0",
+    "uglifyjs-webpack-plugin": "^0.4.3",
     "webpack": "latest",
     "webpack-dev-server": "latest"
   },
