--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "karma-webpack": "^2.0.2",
     "mocha": "^3.2.0",
     "mocha-cli": "^1.0.1",
-    "playkit-js": "git+https://github.com/kaltura/playkit-js.git#v0.12.0",
+    "playkit-js": "https://github.com/kaltura/playkit-js.git#v0.17.0",
     "pre-push": "^0.1.1",
     "sinon": "^2.0.0",
     "sinon-chai": "^2.8.0",
@@ -72,7 +72,7 @@
     "webpack-dev-server": "latest"
   },
   "peerDependencies": {
-    "playkit-js": "git+https://github.com/kaltura/playkit-js.git#v0.12.0"
+    "playkit-js": "https://github.com/kaltura/playkit-js.git#v0.17.0"
   },
   "keywords": [],
   "license": "AGPL-3.0",
