youbora update to v6

--- a/package.json
+++ b/package.json
@@ -75,5 +75,8 @@
   "bugs": {
     "url": "https://github.com/kaltura/playkit-js-youbora/issues"
   },
-  "homepage": "https://github.com/kaltura/playkit-js-youbora#readme"
+  "homepage": "https://github.com/kaltura/playkit-js-youbora#readme",
+  "dependencies": {
+    "youboralib": "^6.2.3"
+  }
 }
