build(FEC-9495): update after deploy stage to ping Jenkins

--- a/.travis.yml
+++ b/.travis.yml
@@ -52,6 +52,8 @@ jobs:
           on:
             tags: true
             branch: master
+      after_deploy:
+        - ./scripts/after_deploy.sh "youbora" tag $JENKINS_TAG_TOKEN
     # publish canary package if on master
     - stage: Release canary
       if: (branch = master) AND (type != pull_request) AND commit_message !~ /^chore\(release\)/
@@ -65,6 +67,9 @@ jobs:
         on:
           tags: false
           branch: master
+      after_deploy:
+        - currentVersion=$(npx -c 'echo "$npm_package_version"')
+        - ./scripts/after_deploy.sh "youbora" $currentVersion $JENKINS_CANARY_TOKEN
     # Required tests
     - stage: Tests
       if: (branch = master) OR (tag IS present) OR (type = pull_request)
