--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,7 @@ jobs:
             tags: true
             branch: master
       after_deploy:
-        - ./scripts/after_deploy.sh "youbora" tag $JENKINS_TAG_TOKEN
+        - ./scripts/after_deploy.sh "youbora" "$TRAVIS_TAG" "$JENKINS_TAG_TOKEN"
     # publish canary package if on master
     - stage: Release canary
       if: (branch = master) AND (type != pull_request) AND commit_message !~ /^chore\(release\)/
@@ -69,7 +69,7 @@ jobs:
           branch: master
       after_deploy:
         - currentVersion=$(npx -c 'echo "$npm_package_version"')
-        - ./scripts/after_deploy.sh "youbora" $currentVersion $JENKINS_CANARY_TOKEN
+        - ./scripts/after_deploy.sh "youbora" "$currentVersion" "$JENKINS_CANARY_TOKEN"
     # Required tests
     - stage: Tests
       if: (branch = master) OR (tag IS present) OR (type = pull_request)
