--- a/.travis.yml
+++ b/.travis.yml
@@ -53,6 +53,7 @@ jobs:
             tags: true
             branch: master
       after_deploy:
+        - chmod +x ./scripts/after_deploy.sh
         - ./scripts/after_deploy.sh "youbora" "$TRAVIS_TAG" "$JENKINS_TAG_TOKEN"
     # publish canary package if on master
     - stage: Release canary
@@ -70,6 +71,8 @@ jobs:
           branch: master
       after_deploy:
         - currentVersion=$(npx -c 'echo "$npm_package_version"')
+        - echo $currentVersion
+        - chmod +x ./scripts/after_deploy.sh
         - ./scripts/after_deploy.sh "youbora" "$currentVersion" "$JENKINS_CANARY_TOKEN"
     # Required tests
     - stage: Tests
