--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,7 @@ jobs:
             branch: master
       after_deploy:
         - currentVersion=$(npx -c 'echo "$npm_package_version"')
-        - conventional-github-releaser -t $GH_NOTE_TOKEN
+        - conventional-github-releaser -t "$GH_TOKEN"
         - chmod +x ./scripts/after_deploy.sh
         - ./scripts/after_deploy.sh "youbora" "$currentVersion" "$JENKINS_TAG_TOKEN"
     # publish canary package if on master
