--- a/package.json
+++ b/package.json
@@ -25,17 +25,17 @@
   "main": "dist/playkit-youbora.js",
   "scripts": {
     "prebuild": "npm run clean",
-    "build": "NODE_ENV=production webpack",
+    "build": "webpack --mode production",
     "clean": "rm -rf ./dist",
-    "dev": "webpack-dev-server",
+    "dev": "webpack-dev-server --mode development",
     "eslint": "eslint . --color",
     "flow": "flow check",
     "precommit": "lint-staged",
     "prettier:fix": "prettier --write .",
     "pushTaggedRelease": "git push --follow-tags --no-verify origin master",
     "release": "standard-version",
-    "test": "NODE_ENV=test karma start --color",
-    "watch": "webpack --progress --colors --watch"
+    "test": "NODE_ENV=test karma start --color --mode development",
+    "watch": "webpack --progress --colors --watch --mode development"
   },
   "lint-staged": {
     "*.{js,jsx}": [
