feat(FEC-10057): move the plugin manager to kaltura player

--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "flow-bin": "^0.129.0",
     "husky": "^4.2.5",
     "istanbul": "^0.4.5",
+    "kaltura-player-js": "https://github.com/kaltura/kaltura-player-js.git#FEC-10057",
     "karma": "^5.1.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.1.0",
@@ -101,7 +102,8 @@
     "youboralib": "6.7.11"
   },
   "peerDependencies": {
-    "@playkit-js/playkit-js": "0.62.1-canary.724715e"
+    "@playkit-js/playkit-js": "0.62.1-canary.724715e",
+    "kaltura-player-js": "https://github.com/kaltura/kaltura-player-js.git#FEC-10057"
   },
   "publishConfig": {
     "access": "public"
