--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-flow": "^7.10.4",
     "@babel/register": "^7.10.5",
-    "@playkit-js/playkit-js": "0.62.1-canary.724715e",
+    "@playkit-js/playkit-js": "0.63.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-istanbul": "^6.0.0",
@@ -75,6 +75,7 @@
     "flow-bin": "^0.129.0",
     "husky": "^4.2.5",
     "istanbul": "^0.4.5",
+    "kaltura-player-js": "https://github.com/kaltura/kaltura-player-js.git#v0.56.0",
     "karma": "^5.1.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.1.0",
@@ -101,7 +102,8 @@
     "youboralib": "6.7.11"
   },
   "peerDependencies": {
-    "@playkit-js/playkit-js": "0.62.1-canary.724715e"
+    "@playkit-js/playkit-js": "0.63.0",
+    "kaltura-player-js": "https://github.com/kaltura/kaltura-player-js.git#v0.56.0"
   },
   "publishConfig": {
     "access": "public"
