--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -18,3 +18,6 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: yarn install
       - run: yarn run eslint
+      - run: yarn run flow
+      - run: yarn run test
+
