--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -18,9 +18,11 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: yarn install
-      - run: yarn run eslint
-      - run: yarn run flow
-      - run: yarn run test
-        env:
-          NODE_OPTIONS: '--openssl-legacy-provider'
+      - run: chrome --version
+#      - run: yarn run eslint
+#      - run: yarn run flow
+#      - run: yarn run test
+#        env:
+#          NODE_OPTIONS: '--openssl-legacy-provider'
 
+*
