--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -19,6 +19,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: yarn install
       - run: chrome --version
+#      - run: yarn run eslint
+#      - run: yarn run flow
+#      - run: yarn run test
+#        env:
+#          NODE_OPTIONS: '--openssl-legacy-provider'
 
-
-*
