--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -17,8 +17,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: yarn install
+      - uses: browser-actions/setup-chrome@v1
       - run: chrome --version
+#      - run: yarn install
 #      - run: yarn run eslint
 #      - run: yarn run flow
 #      - run: yarn run test
