--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -24,6 +24,7 @@ jobs:
       - run: yarn install
       - run: yarn run eslint
       - run: yarn run flow
+      - run: printenv
       - run: yarn run test
         env:
           NODE_OPTIONS: '--openssl-legacy-provider'
