--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "prettier:fix": "prettier --write .",
     "pushTaggedRelease": "git push --follow-tags --no-verify origin master",
     "release": "standard-version",
-    "test": "NODE_ENV=test karma start --color --mode development --browsers ChromeHeadless,FirefoxHeadless,SafariHeadless",
+    "test": "NODE_ENV=test karma start --color --mode development",
+    "test:ubuntu": "NODE_ENV=test karma start --color --mode development --browsers ChromeHeadless,FirefoxHeadless",
+    "test:macos": "NODE_ENV=test karma start --color --mode development --browsers SafariHeadless",
     "test:watch": "NODE_ENV=test karma start --browsers=Chrome --single-run=false --auto-watch",
     "watch": "webpack --progress --colors --watch --mode development"
   },
