--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -22,9 +22,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - uses: browser-actions/setup-chrome@v1
-        if ${{ matrix.os }} == 'ubuntu-latest'
+        if: ${{ matrix.os }} == 'ubuntu-latest'
       - uses: browser-actions/setup-firefox@v1
-        if ${{ matrix.os }} == 'ubuntu-latest'
+        if: ${{ matrix.os }} == 'ubuntu-latest'
       - run: yarn install
       - run: yarn run eslint
       - run: yarn run flow
