--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -22,18 +22,18 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - uses: browser-actions/setup-chrome@v1
-        if: ${{ matrix.os }} == 'ubuntu-latest'
+        if: matrix.os == 'ubuntu-latest'
       - uses: browser-actions/setup-firefox@v1
-        if: ${{ matrix.os }} == 'ubuntu-latest'
+        if: matrix.os == 'ubuntu-latest'
       - run: yarn install
       - run: yarn run eslint
       - run: yarn run flow
       - run: yarn run test:ubuntu
-        if: ${{ matrix.os }} == 'ubuntu-latest'
+        if: matrix.os == 'ubuntu-latest'
         env:
           NODE_OPTIONS: "--openssl-legacy-provider"
       - run: yarn run test:macos
-        if: ${{ matrix.os }} == 'macos-latest'
+        if: matrix.os == 'macos-latest'
         env:
           NODE_OPTIONS: "--openssl-legacy-provider"
 
