--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -11,7 +11,7 @@ jobs:
   tests:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, self-hosted]
         node-version: [ 17.x ]
     runs-on: ${{ matrix.os }}
     steps:
@@ -33,7 +33,7 @@ jobs:
         env:
           NODE_OPTIONS: "--openssl-legacy-provider"
       - run: yarn run test:macos
-        if: matrix.os == 'macos-latest'
+        if: matrix.os == 'self-hosted'
         env:
           NODE_OPTIONS: "--openssl-legacy-provider"
 
