--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -22,7 +22,7 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
       - uses: browser-actions/setup-firefox@v1
         if: matrix.os == 'ubuntu-latest'
-      - run: yarn install --verbose
+      - run: yarn install
       - run: yarn run eslint
       - run: yarn run flow
       - run: yarn run test:ubuntu
