--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -8,8 +8,7 @@ on:
 
 jobs:
   running-tests:
-    uses: kaltura/ovp-pipelines/.github/workflows/player_run_tests.yml@6e5a277456a01d3cf0fe46399f65cbe92fb61502
+    uses: kaltura/playkit-js-youbora/.github/workflows/player_run_tests.yml@devops-tests
     with:
-      yarn-run-to-execute: "[eslint, flow]"
-
+      yarn-run-to-execute: [eslint, flow]
 
