add new workflow for player and plugin tests

--- a/.github/workflows/player_run_tests.yml
+++ b/.github/workflows/player_run_tests.yml
@@ -31,5 +31,9 @@ jobs:
       - name: Yarn install
         run: yarn install
       - name: Yarn run ${{ matrix.commands }}
-        run: yarn run ${{ matrix.commands }}
+        run: |
+          for command in ${{ matrix.commands }}; do
+            yarn run $command
+          done
+
 
