--- a/.github/workflows/player_run_tests.yml
+++ b/.github/workflows/player_run_tests.yml
@@ -13,7 +13,6 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest]
         node-version: [ 17.x ]
-        commands: ${{fromJSON(inputs.yarn-run-to-execute)}}
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
@@ -30,9 +29,9 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
       - name: Yarn install
         run: yarn install
-      - name: Yarn run ${{ matrix.commands }}
+      - name: Yarn run ${{fromJSON(inputs.yarn-run-to-execute)}}
         run: |
-          for command in ${{ matrix.commands }}; do
+          for command in ${{fromJSON(inputs.yarn-run-to-execute)}}; do
             yarn run $command
           done
 
