--- a/.github/workflows/upload_packages.yaml
+++ b/.github/workflows/upload_packages.yaml
@@ -1,4 +1,4 @@
-name: Player And Plugin Tests
+name: Player And Plugin Release Version QA
 on:
   workflow_call:
     inputs:
@@ -8,31 +8,24 @@ on:
         type: string
 
 jobs:
-  running-tests:
+  release-version-qa:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest]
         node-version: [ 17.x ]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Testing on Node.js ${{ matrix.node-version }}
+      - name: Node.js version ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Setup Chrome
-        uses: browser-actions/setup-chrome@v1
-        if: matrix.os == 'ubuntu-latest'
-      - name: Setup Firefox
-        uses: browser-actions/setup-firefox@v1
-        if: matrix.os == 'ubuntu-latest'
-      - name: Yarn install
-        run: yarn install
       - name: Yarn run ${{ inputs.yarn-run-to-execute }}
         run: |
           for command in ${{ inputs.yarn-run-to-execute }}; do
-            yarn run $command
+            echo "yarn run $command"
           done
+      - name:
 
 
