--- a/.github/drafts/run_tests.yml
+++ b/.github/drafts/run_tests.yml
@@ -10,5 +10,5 @@
 #  running-tests:
 #    uses: kaltura/playkit-js-youbora/.github/workflows/player_run_tests.yml@devops-tests
 #    with:
-#      yarn-run-to-execute: "eslint flow"
+#      yarn-run-to-execute: 'eslint flow'
 #
