--- a/.github/workflows/upload_packages.yaml
+++ b/.github/workflows/upload_packages.yaml
@@ -25,33 +25,11 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Yarn install
-        run: yarn install
-      - name: Yarn run ${{ inputs.yarn-run-to-execute }}
-        run: |
-          git config --global user.email "ovp.cp@kaltura.com"
-          git config --global user.name "ovp-github-actions"
-          for command in ${{ inputs.yarn-run-to-execute }}; do
-            yarn run $command
-          done
-      - name: Update version
-        run: |
-          sha=$(echo "${GITHUB_SHA::7}")
-          currentVersion=$(npx -c 'echo "$npm_package_version"')
-          newVersion="${currentVersion}-${sha}"
-          echo "New version ${newVersion}"
-          sed -iE "s/${currentVersion}/${newVersion}/g" package.json
-          sed -iE "s/${currentVersion}/${newVersion}/g" CHANGELOG.md
-          rm package.jsonE
-          rm CHANGELOG.mdE
-      - name: Yarn run build
-        run: yarn run build
-        env:
-          NODE_OPTIONS: "--openssl-legacy-provider"
       - uses: jfrog/setup-jfrog-cli@v3
         env:
           JF_URL: ${{ inputs.npm-registry-url }}
-          JF_ACCESS_TOKEN: ${{ secrets.NPM_JFROG_TOKEN }}
+          JF_USER: ${{ secrets.NPM_JFROG_USER }}
+          JF_PASSWORD: ${{ secrets.NPM_JFROG_PASS }}
       - run: |
           jf rt ping
 
