--- a/.github/workflows/upload_packages.yaml
+++ b/.github/workflows/upload_packages.yaml
@@ -51,7 +51,7 @@ jobs:
         run: yarn run build
         env:
           NODE_OPTIONS: "--openssl-legacy-provider"
-      - run: yarn publish
+      - run: yarn publish --verbose
         env:
           NPM_AUTH_TOKEN: ${{ secrets.NPM_JFROG_TOKEN }}
 
