--- a/.github/workflows/upload_packages.yaml
+++ b/.github/workflows/upload_packages.yaml
@@ -51,8 +51,9 @@ jobs:
         run: yarn run build
         env:
           NODE_OPTIONS: "--openssl-legacy-provider"
-      - run: yarn publish --verbose
-        env:
-          NPM_AUTH_TOKEN: ${{ secrets.NPM_JFROG_TOKEN }}
+      - run: |
+          echo "registry=${{ inputs.npm-registry-url }}" > /home/runner/work/.npmrc
+          curl -u${{ secrets.NPM_JFROG_USER }}:${{ secrets.NPM_JFROG_PASS }} https://kalturaa.jfrog.io/artifactory/api/npm/auth >> /home/runner/work/.npmrc
+          yarn publish --verbose
 
 
