--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@playkit-js/playkit-js-youbora",
-  "version": "2.3.8",
+  "version": "2.3.8-96750d3",
   "keywords": [
     "kaltura",
     "analytics",
