--- a/.github/workflows/upload_packages.yaml
+++ b/.github/workflows/upload_packages.yaml
@@ -53,8 +53,8 @@ jobs:
           NODE_OPTIONS: "--openssl-legacy-provider"
       - run: env
       - run: |
-          echo "registry=${{ inputs.npm-registry-url }}" > /home/runner/work/.npmrc
-          curl -u${{ secrets.NPM_JFROG_USER }}:${{ secrets.NPM_JFROG_PASS }} https://kalturaa.jfrog.io/artifactory/api/npm/auth >> /home/runner/work/.npmrc
+          echo "registry=${{ inputs.npm-registry-url }}" > /home/runner/work/_temp/.npmrc
+          curl -u${{ secrets.NPM_JFROG_USER }}:${{ secrets.NPM_JFROG_PASS }} https://kalturaa.jfrog.io/artifactory/api/npm/auth >> /home/runner/work/_temp/.npmrc
           yarn publish --verbose
         env:
           NPM_AUTH_TOKEN: ${{ secrets.NPM_JFROG_TOKEN }}
