--- a/.github/workflows/upload_packages.yaml
+++ b/.github/workflows/upload_packages.yaml
@@ -17,7 +17,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         node-version: [ 17.x ]
-    runs-on: ${{ matrix.os }}
+    runs-on: self-hosted
     steps:
       - name: Checkout
         uses: actions/checkout@v3
