--- a/.github/workflows/upload_packages.yaml
+++ b/.github/workflows/upload_packages.yaml
@@ -28,10 +28,6 @@ jobs:
           registry-url: ${{ inputs.npm-registry-url }}
           always-auth: true
           token: ${{ secrets.NPM_JFROG_TOKEN }}
-      - run: |
-          echo "registry=${{ inputs.npm-registry-url }}" > /home/runner/work/_temp/.npmrc
-          curl -u${{ secrets.NPM_JFROG_USER }}:${{ secrets.NPM_JFROG_PASS }} https://kalturaa.jfrog.io/artifactory/api/npm/auth >> /home/runner/work/_temp/.npmrc
-          cat /home/runner/work/_temp/.npmrc
-
+      - run: env
 
 
