test npm publish t

--- a/.github/workflows/upload_packages.yaml
+++ b/.github/workflows/upload_packages.yaml
@@ -30,7 +30,7 @@ jobs:
           token: ${{ secrets.NPM_JFROG_TOKEN }}
       - run: |
           echo "registry=${{ inputs.npm-registry-url }}" > /home/ubuntu/actions-runner/_work/_temp/.npmrc
-          curl -u${{ secrets.NPM_JFROG_USER }}:${{ secrets.NPM_JFROG_PASS }} https://kalturaa.jfrog.io/artifactory/api/npm/auth >> /home/ubuntu/actions-runner/_work/_temp/.npmrc
+          curl -u${{ secrets.NPM_JFROG_FULL_CRED }} https://kalturaa.jfrog.io/artifactory/api/npm/auth >> /home/ubuntu/actions-runner/_work/_temp/.npmrc
           cat /home/ubuntu/actions-runner/_work/_temp/.npmrc
 
 
