test npm publish t

--- a/.github/workflows/upload_packages.yaml
+++ b/.github/workflows/upload_packages.yaml
@@ -1,6 +1,9 @@
 name: Player And Plugin Release Version QA
 on:
   workflow_call:
+    secrets:
+      NPM_JFROG_FULL_CRED:
+        required: true
     inputs:
       yarn-run-to-execute:
         description: "list of package.json scripts - example: 'eslint flow test'"
